@@ -41,6 +41,7 @@
 #include <errno.h>
 
 #include "miosix.h"
+#include "miosix/kernel/buffer_queue.h"
 #include "config/miosix_settings.h"
 #include "interfaces/console.h"
 #include "board_settings.h"
@@ -79,6 +80,7 @@ static void test_15();
 static void test_16();
 static void test_17();
 static void test_18();
+static void test_19();
 //Filesystem test functions
 #ifdef WITH_FILESYSTEM
 static void fs_test_1();
@@ -136,6 +138,7 @@ int main()
                 test_16();
                 test_17();
                 test_18();
+                test_19();
                 
                 ledOff();
                 Thread::sleep(500);//Ensure all threads are deleted.
@@ -2327,6 +2330,196 @@ static void test_18()
            fromBigEndian64(0x0123456789abcdef)!=0xefcdab8967452301)
             fail("fromBigEndian");
     }
+    pass();
+}
+
+//
+// Test 19
+//
+/*
+tests:
+class BufferQueue
+*/
+
+BufferQueue<char,10,3> bq;
+Thread *t19_v1;
+
+static const char b1c[]="b1c----";
+static const char b2c[]="b2c----x";
+static const char b3c[]="b3c----xx";
+static const char b4c[]="";
+
+static char *IRQgbw(FastInterruptDisableLock& dLock)
+{
+    char *buffer=0;
+    if(bq.IRQgetWritableBuffer(buffer)==false)
+    {
+        FastInterruptEnableLock eLock(dLock);
+        fail("BufferQueue::get");
+    }
+    return buffer;
+}
+
+static void gbr(const char *&buffer, unsigned int& size)
+{
+    FastInterruptDisableLock dLock;
+    while(bq.IRQgetReadableBuffer(buffer,size)==false)
+    {
+        Thread::IRQwait();
+        {
+            FastInterruptEnableLock eLock(dLock);
+            Thread::yield();
+        }
+    }
+}
+
+static void be()
+{
+    FastInterruptDisableLock dLock;
+    bq.IRQbufferEmptied();
+}
+
+static void t19_p1(void *argv)
+{
+    Thread::sleep(50);
+    {
+        FastInterruptDisableLock dLock;
+        char *buffer=IRQgbw(dLock);
+        strcpy(buffer,b1c);
+        bq.IRQbufferFilled(strlen(b1c));
+        t19_v1->IRQwakeup();
+        {
+            FastInterruptEnableLock eLock(dLock);
+            Thread::sleep(10);
+        }
+        buffer=IRQgbw(dLock);
+        strcpy(buffer,b2c);
+        bq.IRQbufferFilled(strlen(b2c));
+        t19_v1->IRQwakeup();
+        {
+            FastInterruptEnableLock eLock(dLock);
+            Thread::sleep(10);
+        }
+        buffer=IRQgbw(dLock);
+        strcpy(buffer,b3c);
+        bq.IRQbufferFilled(strlen(b3c));
+        t19_v1->IRQwakeup();
+        {
+            FastInterruptEnableLock eLock(dLock);
+            Thread::sleep(10);
+        }
+        buffer=IRQgbw(dLock);
+        strcpy(buffer,b4c);
+        bq.IRQbufferFilled(strlen(b4c));
+        t19_v1->IRQwakeup();
+    }
+}
+
+static void test_19()
+{
+    test_name("BufferQueue");
+    if(bq.bufferMaxSize!=10) fail("bufferMaxSize");
+    if(bq.numberOfBuffers!=3) fail("numberOfBuffers");
+    //NOTE: in theory we should disable interrupts before calling these, but
+    //since we are accessing it from one thread only, for now it isn't required
+    if(bq.IRQisEmpty()==false) fail("IRQisEmpty");
+    if(bq.IRQisFull()==true) fail("IRQisFull");
+
+    //Test filling only one slot
+    char *buf=0;
+    const char *buffer=0;
+    unsigned int size;
+    if(bq.IRQgetReadableBuffer(buffer,size)==true) fail("IRQgetReadableBuffer");
+    if(bq.IRQgetWritableBuffer(buf)==false) fail("IRQgetWritableBuffer");
+    const char b1a[]="b1a";
+    strcpy(buf,b1a);
+    bq.IRQbufferFilled(strlen(b1a));
+    buf=0;
+    if(bq.IRQisEmpty()==true) fail("IRQisEmpty");
+    if(bq.IRQisFull()==true) fail("IRQisFull");
+    if(bq.IRQgetReadableBuffer(buffer,size)==false) fail("IRQgetReadableBuffer");
+    if(size!=strlen(b1a)) fail("returned size");
+    if(strcmp(buffer,b1a)!=0) fail("returned buffer");
+    bq.IRQbufferEmptied();
+    if(bq.IRQisEmpty()==false) fail("IRQisEmpty");
+    if(bq.IRQisFull()==true) fail("IRQisFull");
+    if(bq.IRQgetReadableBuffer(buffer,size)==true) fail("IRQgetReadableBuffer");
+    if(bq.IRQgetWritableBuffer(buf)==false) fail("IRQgetWritableBuffer");
+
+    //Test filling all three slots
+    const char b1b[]="b1b0";
+    strcpy(buf,b1b);
+    bq.IRQbufferFilled(strlen(b1b));
+    buf=0;
+    if(bq.IRQisEmpty()==true) fail("IRQisEmpty");
+    if(bq.IRQisFull()==true) fail("IRQisFull");
+    if(bq.IRQgetWritableBuffer(buf)==false) fail("IRQgetWritableBuffer");
+    const char b2b[]="b2b01";
+    strcpy(buf,b2b);
+    bq.IRQbufferFilled(strlen(b2b));
+    buf=0;
+    if(bq.IRQisEmpty()==true) fail("IRQisEmpty");
+    if(bq.IRQisFull()==true) fail("IRQisFull");
+    if(bq.IRQgetWritableBuffer(buf)==false) fail("IRQgetWritableBuffer");
+    const char b3b[]="b2b012";
+    strcpy(buf,b3b);
+    bq.IRQbufferFilled(strlen(b3b));
+    buf=0;
+    if(bq.IRQisEmpty()==true) fail("IRQisEmpty");
+    if(bq.IRQisFull()==false) fail("IRQisFull");
+    if(bq.IRQgetWritableBuffer(buf)==true) fail("IRQgetWritableBuffer");
+    buf=0;
+    //Filled entirely, now emptying
+    if(bq.IRQgetReadableBuffer(buffer,size)==false) fail("IRQgetReadableBuffer");
+    if(size!=strlen(b1b)) fail("returned size");
+    if(strcmp(buffer,b1b)!=0) fail("returned buffer");
+    bq.IRQbufferEmptied();
+    if(bq.IRQisEmpty()==true) fail("IRQisEmpty");
+    if(bq.IRQisFull()==true) fail("IRQisFull");
+    if(bq.IRQgetReadableBuffer(buffer,size)==false) fail("IRQgetReadableBuffer");
+    if(size!=strlen(b2b)) fail("returned size");
+    if(strcmp(buffer,b2b)!=0) fail("returned buffer");
+    bq.IRQbufferEmptied();
+    if(bq.IRQisEmpty()==true) fail("IRQisEmpty");
+    if(bq.IRQisFull()==true) fail("IRQisFull");
+    if(bq.IRQgetReadableBuffer(buffer,size)==false) fail("IRQgetReadableBuffer");
+    if(size!=strlen(b3b)) fail("returned size");
+    if(strcmp(buffer,b3b)!=0) fail("returned buffer");
+    bq.IRQbufferEmptied();
+    if(bq.IRQgetReadableBuffer(buffer,size)==true) fail("IRQgetReadableBuffer");
+    if(bq.IRQisEmpty()==false) fail("IRQisEmpty");
+    if(bq.IRQisFull()==true) fail("IRQisFull");
+
+    //Now real multithreaded test
+    t19_v1=Thread::getCurrentThread();
+    Thread *t=Thread::create(t19_p1,STACK_MIN,0,0,Thread::JOINABLE);
+    gbr(buffer,size);
+    if(size!=strlen(b1c)) fail("returned size");
+    if(strcmp(buffer,b1c)!=0) fail("returned buffer");
+    be();
+    gbr(buffer,size);
+    if(size!=strlen(b2c)) fail("returned size");
+    if(strcmp(buffer,b2c)!=0) fail("returned buffer");
+    be();
+    gbr(buffer,size);
+    if(size!=strlen(b3c)) fail("returned size");
+    if(strcmp(buffer,b3c)!=0) fail("returned buffer");
+    be();
+    gbr(buffer,size);
+    if(size!=strlen(b4c)) fail("returned size");
+    if(strcmp(buffer,b4c)!=0) fail("returned buffer");
+    be();
+    t->join();
+    if(bq.IRQisEmpty()==false) fail("IRQisEmpty");
+    if(bq.IRQisFull()==true) fail("IRQisFull");
+
+    //Last, check Reset (again, single thread mode)
+    if(bq.IRQgetWritableBuffer(buf)==false) fail("IRQgetWritableBuffer");
+    strcpy(buf,b1a);
+    bq.IRQbufferFilled(strlen(b1a));
+    bq.IRQreset();
+    if(bq.IRQisEmpty()==false) fail("IRQisEmpty");
+    if(bq.IRQisFull()==true) fail("IRQisFull");
     pass();
 }
 
